[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameDVDCardtridge/ManOfCoyote/ProsotipePlatformerGuy.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/JustAMellinda/InteractThisA.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/ManOfCoyote/JatuhAAA.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/JustAMellinda/JustAMellinda.gd" type="Script" id=4]
[ext_resource path="res://GameDVDCardtridge/ManOfCoyote/LifePartnerWin.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/JustAGolf/YayComplete.tscn" type="PackedScene" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 8, 0.158522, 8 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 16, 0.32, 16 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.32549, 0.0705882, 0.333333, 1 )

[sub_resource type="ProceduralSky" id=5]
sky_top_color = Color( 0.0980392, 0.0627451, 0.701961, 1 )
sky_horizon_color = Color( 0.439216, 0.517647, 0.498039, 1 )
ground_bottom_color = Color( 0.262745, 0.133333, 0.270588, 1 )
ground_horizon_color = Color( 0.415686, 0.313726, 0.227451, 1 )
sun_color = Color( 0.831373, 0.890196, 0.129412, 1 )

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 5 )
ambient_light_color = Color( 0, 0.313726, 0.439216, 1 )

[node name="JustAMellinda" type="Spatial"]
script = ExtResource( 4 )

[node name="Lantai" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Lantai"]
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Lantai"]
mesh = SubResource( 2 )
material = SubResource( 3 )

[node name="ProsotipePlatformerGuy" parent="." instance=ExtResource( 1 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -2.18557e-08, -0.866025, 0.5, -3.78552e-08, 0.5, 0.866025, -1, 1.77636e-15, -4.37114e-08, 0, 3, 0 )

[node name="InteractThisA" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5 )

[node name="JatuhAAA" parent="." instance=ExtResource( 3 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="LifePartnerWin" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1, 0 )
prerequisite_interact = NodePath("../InteractThisA")

[node name="YayComplete" parent="." instance=ExtResource( 6 )]
visible = true
ContentWindow = "Yay you've level completed Simulator!"

[node name="LocalAudio" type="AudioStreamPlayer" parent="."]
[connection signal="PlayerDidFell" from="JatuhAAA" to="." method="_on_JatuhAAA_PlayerDidFell"]
[connection signal="InteractGoaled" from="LifePartnerWin" to="." method="_on_LifePartnerWin_InteractGoaled"]
